-u styling contrast fix

--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -648,6 +648,7 @@
 
 .no-transactions-indicator {
   background-image: @no-tx-icon;
+  color: #224;
 }
 
 .no-tickets-indicator {
